﻿IMPROVEMENTS / FIXES
- General:
	- Fix false positives of Krakensbane being active on vessel switches.
- AI / WM:
	- Clamp the vertical adjustment of the fly-to position to at most half the distance to the target (should fix the issue of being unable to attack targets directly below).
	- Add a slider for biasing the Immelmann pitch direction when not close to terrain/min altitude.
- RWP:
	- Add RWP override settings (in RWP_settings.cfg) for automatically enabling/disabling RWP options when the RWP toggle is toggled or the RWP slider is adjusted.
		- Settings adjusted when RWP is enabled aren't saved, but can be manually added to the RWP_settings.cfg file.
		- Settings adjusted when RWP is disabled are saved to settings.cfg as usual and serve as the base that the RWP settings override.
		- Overrides for round 0 are global overrides and are applied first before round specific overrides are applied.
		- The defaults for the RWP_settings.cfg file will be saved when settings are first saved and changes made to the file override the defaults.
	- Restrict the RWP slider to only include rounds that have overrides and move it to the top of the section to avoid issues with layout changes while adjusting the slider.

v1.6.10.1
IMPROVEMENTS / FIXES
- UI:
	- Updated German localisation from EzBro.
	- Fix some localisation tags and duplicates.
- AI / WM:
	- Don't reset PID values to stored auto-tuning ones when switching the clamped/unclamped toggle.
	- Add an auto-tuning summary line to the AI GUI when auto-tuning is not running (when there's something to show).
- Weapons:
	- Fix rockets detonating too early.
	- Missiles:
		- Fix missiles not having their exhaust and boost FX.

v1.6.10.0
IMPROVEMENTS / FIXES
- General:
	- Fix Krakensbane adjustments when the active vessel dies.
	- Make sure various pooled objects are disabled when leaving the flight scene.